# secure-credentials-kit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
secure_credentials/: cli.py  credentials.py  fastapi.py  secrets_loader.py  utils.py
secure_credentials/management/commands/: credentials_edit.py  credentials_generate_key.py
secure_credentials_kit/: cli.py  credentials.py  fastapi.py  secrets_loader.py  utils.py
secure_credentials_kit/management/commands/: credentials_edit.py  credentials_generate_key.py
tests/: test_fastapi.py  test_key_roles.py  test_packaging.py  test_secrets_loader.py
