[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-credentials"
version = "0.1.0"
description = "A secure encrypted credentials system for Django and FastAPI, inspired by Rails credentials"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "fastapi", "credentials", "encryption", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
django = ["Django>=5.2,<6.1"]
fastapi = ["fastapi>=0.100.0"]

[project.scripts]
secure-credentials = "secure_credentials.cli:main"
secure-credentials-edit = "secure_credentials.cli:edit_main"
secure-credentials-generate-key = "secure_credentials.cli:generate_key_main"

[project.urls]
Homepage = "https://github.com/lexpank/django-secure-credentials"
Issues = "https://github.com/lexpank/django-secure-credentials/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]

[dependency-groups]
dev = [
    "build>=1.2.0",
]
