[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-credentials-kit"
version = "0.3.1"
description = "A secure encrypted credentials system for Django and FastAPI, inspired by Rails credentials"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "fastapi", "credentials", "encryption", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
django = ["Django>=5.2,<6.1"]
fastapi = ["fastapi>=0.100.0"]

[project.scripts]
secure-credentials-kit = "secure_credentials_kit.cli:main"
secure-credentials-kit-edit = "secure_credentials_kit.cli:edit_main"
secure-credentials-kit-generate-key = "secure_credentials_kit.cli:generate_key_main"

[project.urls]
Homepage = "https://github.com/lexpank/secure-credentials-kit"
Issues = "https://github.com/lexpank/secure-credentials-kit/issues"

[tool.setuptools.packages.find]
include = ["secure_credentials_kit*"]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "twine>=6.0.0",
]
